--- a/popup.css
+++ b/popup.css
@@ -20,6 +20,21 @@
   background-color: #FDF5E6;
 }
 
+.loader {
+  margin-left: 200px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 110px;
+  height: 110px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 #tags{
   -webkit-column-count: 3;
 }
